test/bad/classes/type04.px

class A def
    x: Int

class B: A def
    y: Int


func f(a: {A}): Void def
    return

b = {B()}
f(b)
